# d-collide

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.rtf  README
d-collide/: CMakeLists.txt  bvhnode.cpp  bvhnode.h  bvhnodedefault.cpp  bvhnodedefault.h  collisioncache.cpp  collisioncache.h  collisioninfo.h  collisionpair.cpp  collisionpair.h  dcollide-config.h.cmake  dcollide-defines.h  dcollide-global.h  dcollide.h  debug.cpp  debug.h  debuglog.cpp  debuglog.h  debugstream.cpp  debugstream.h  debugstreamconfiguration_initialize.cpp  meshsplitter.cpp  meshsplitter.h  pipeline.cpp  pipeline.h  proxy.cpp  proxy.h  proxyfactory.cpp  proxyfactory.h  real.h  timing.h  world.cpp  world.h  worldcollisions.cpp  worldcollisions.h  worldparameters.cpp  worldparameters.h
d-collide/boundingvolumes/: aabb.cpp  aabb.h  boundingsphere.cpp  boundingsphere.h  boundingvolume.cpp  boundingvolume.h  kdop.cpp  kdop.h  obb.cpp  obb.h
d-collide/broadphase/: broadphase.cpp  broadphase.h  broadphasebruteforce.cpp  broadphasebruteforce.h  broadphasebruteforcejob.cpp  broadphasebruteforcejob.h  broadphasecollisions.cpp  broadphasecollisions.h  broadphasefactory.cpp  broadphasefactory.h  broadphasehierarchicalgrid.cpp  broadphasehierarchicalgrid.h  broadphasehierarchicalgridjob.cpp  broadphasehierarchicalgridjob.h  broadphasehierarchicalgridjob2.cpp  broadphasehierarchicalgridjob2.h  broadphasehierarchicalgridjobcollection.cpp  broadphasehierarchicalgridjobcollection.h  broadphasehierarchicalgridproxydata.cpp  broadphasehierarchicalgridproxydata.h  broadphasejob.cpp  broadphasejob.h  broadphaseproxydata.cpp  broadphaseproxydata.h  hierarchicalgrid.cpp  hierarchicalgrid.h
d-collide/datatypes/: array.h  list.h  multimapelement.h  set.h  set2.h
d-collide/detectordeform/: detectordeformalgorithm.cpp  detectordeformalgorithm.h  detectordeformjob.cpp  detectordeformjob.h  detectordeformmanager.cpp  detectordeformmanager.h  detectordeformproxydata.cpp  detectordeformproxydata.h  potentialcollidingsets.h  trianglepair.h
d-collide/detectordeform/bvhierarchy/: bvhierarchyalgorithm.cpp  bvhierarchyalgorithm.h  bvhierarchybvhnode.cpp  bvhierarchybvhnode.h  bvhierarchyjob.cpp  bvhierarchyjob.h  bvhierarchyproxydata.cpp  (+1 more)
d-collide/detectorrigid/: bvhtraverse.cpp  bvhtraverse.h  middlephaserigidjob.cpp  middlephaserigidjob.h  middlephaserigidjobcreator.cpp  middlephaserigidjobcreator.h
d-collide/exceptions/: exception.cpp  exception.h
d-collide/math/: matrix.cpp  matrix.h  plane.cpp  plane.h  quaternion.cpp  quaternion.h  vector.cpp  vector.h
d-collide/narrowphase/: boundingvolumecollision.h  boxboxintersector.cpp  boxboxintersector.h  boxsphereintersector.cpp  boxsphereintersector.h  coneintersector.cpp  coneintersector.h  cylinderintersector.cpp  cylinderintersector.h  intersectionhelpers.cpp  intersectionhelpers.h  meshmeshintersector.cpp  meshmeshintersector.h  narrowphase.cpp  narrowphase.h  narrowphasejob.cpp  narrowphasejob.h  narrowphasestrategy.h  spheresphereintersector.cpp  spheresphereintersector.h  spheretriangleintersector.cpp  spheretriangleintersector.h  triangleintersector.cpp  triangleintersector.h  wedgeintersector.cpp  wedgeintersector.h
d-collide/shapes/: box.cpp  box.h  cone.cpp  cone.h  cylinder.cpp  cylinder.h  mesh.cpp  mesh.h  shape.cpp  shape.h  shapes.h  sphere.cpp  sphere.h  wedge.cpp  wedge.h
d-collide/thread/: jobpool.cpp  jobpool.h  jobpoolcollection.cpp  jobpoolcollection.h  thread.cpp  thread.h  threadjobcollection.cpp  threadjobcollection.h  threadpool.cpp  threadpool.h
doc/: CMakeLists.txt  Doxyfile.cmake  HowtoUsage.dox  Mainpage.dox  Phases.dox  Proxies.dox  RigidDeformable.dox  WildcardCopy.cmake  World.dox  d-collide.css  footer.html  header.html
doc/resources/: docs.js
modelloader/: CMakeLists.txt  dcollide-modelloader-config.h.cmake  loader3ds.cpp  loader3ds.h  loader3dsinternal.cpp  loader3dsinternal.h  loaderdummy.cpp  loaderdummy.h  loaderply.cpp  loaderply.h  rply.README  textureinformation.cpp  textureinformation.h
mytests/: CMakeLists.txt  README  benchmark.cpp  broadphaseperformancetest.cpp  broadphasetest.cpp  go.sh  mymiddlephaserigidtest.cpp  performancetest.cpp  provoketest.cpp  simdtest.cpp  spatialhashtest.cpp  surfacehierarchytest.cpp  threadtest.cpp
ode/: CMakeLists.txt  README-d-collide.txt  config.h.cmake
testapp/: CMakeLists.txt  axisobject.cpp  axisobject.h  commandlineparser.cpp  commandlineparser.h  dcollide-config_testapp.h.cmake  do_benchmark_hack.h  framehistory.cpp  framehistory.h  gui.cpp  gui.h  inputhandler.cpp  inputhandler.h  inputlistener.cpp  inputlistener.h  main.cpp  mydeformableobjectnode.cpp  mydeformableobjectnode.h  myobjectnode.cpp  myobjectnode.h  odewrapper.cpp  odewrapper.h  ogrematerials.cpp  ogrematerials.h  ogresceneobjectfactory.cpp  ogresceneobjectfactory.h  testapp.cpp  testapp.h  testappcommandline.cpp  testappcommandline.h  uiaction.cpp  uiaction.h
testapp/modelloader/: modelloader3ds.cpp  modelloader3ds.h  modelloaderply.cpp  modelloaderply.h
testapp/resources/: d-collide.icns  icon.rc
testapp/scenes/: physicsscenebase.cpp  physicsscenebase.h  scenebase.cpp  scenebase.h  scenemanager.cpp  scenemanager.h
tests/: CMakeLists.txt  aabbtest.cpp  aabbtest.h  arraytest.cpp  arraytest.h  boundingspheretest.cpp  boundingspheretest.h  boundingvolumehierarchytest.cpp  boundingvolumehierarchytest.h  boundingvolumetest.cpp  boundingvolumetest.h  broadphasebruteforcetest.cpp  broadphasebruteforcetest.h  broadphasecollisionstest.cpp  broadphasecollisionstest.h  broadphasehierarchicalgridtest.cpp  broadphasehierarchicalgridtest.h  kdoptest.cpp  kdoptest.h  listtest.cpp  listtest.h  main.cpp  middlephaserigidtest.cpp  middlephaserigidtest.h  multimapelementtest.cpp  multimapelementtest.h  narrowphasetest.cpp  narrowphasetest.h  normalstest.cpp  normalstest.h  obbtest.cpp  obbtest.h  proxytest.cpp  proxytest.h  settest.cpp  settest.h  undotest.cpp  undotest.h  worldtest.cpp  worldtest.h
tests/deformable/: deformablebvhnodetest.cpp  deformablebvhnodetest.h  surfacehierarchytest.cpp  surfacehierarchytest.h
(+142 files in other folders)
